# mdm-bot

./: .env.example  .env.production  .gitignore  CHANGES.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  FEATURES.md  MINIAPP_GUIDE.md  MINIAPP_QUICKSTART.md  Makefile  PLAN.md  PRODUCTION_CHECKLIST.md  PRODUCTION_CHECKLIST.txt  PRODUCTION_DEPLOYMENT.md  PRODUCTION_READY_SUMMARY.md  PRODUCTION_SETUP_SUMMARY.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_PRODUCTION_GUIDE.md  QUICK_START.md  README.md  VUE_MIGRATION_PLAN.md  alembic.ini  api_server.py  config.py  convert.py  database.db  database.py  docker-compose.override.yml.example  docker-compose.prod.yaml  docker-compose.yaml  docker-compose.yml  init.sh  kbs.py  main.py  meilisearch_client.py  models.py  pyproject.toml  utils.py  (+1 more)
bot/: base.py  config.py  database.py  main.py  model.py  schemas.py
bot/dao/: base.py  dao.py  database.py  database_middleware.py  models.py
bot/handlers/: start.py
bot/keyboards/: kb.py  kbs.py
bot/migration/: env.py
bot/user/: kbs.py  schemas.py  user_router.py
mdm_bot/: __init__.py  bot.py  run_api.py
mdm_bot/api/: __init__.py  app.py
mdm_bot/core/: __init__.py  config.py  database.py  models.py  search.py
mdm_bot/frontend/: package.json
mdm_bot/handlers/: __init__.py  start.py
nginx/: nginx.conf
scripts/: check_miniapp.sh  dev.sh
templates/: base.html  index.html  product_detail.html  products.html  support.html
webapp/: .env.example  Dockerfile  Dockerfile.prod  README.md  index.html  nginx-ssl.conf.template  nginx.conf  package.json  vite.config.js
(+16 files in other folders)
