[project]
name = "mdm-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.20.0.post0",
    "art>=6.5",
    "logging>=0.4.9.6",
    "pydantic-settings>=2.9.1",
    "sqlalchemy>=2.0.40",
]

[tool.ruff]
target-version = "py39"
line-length = 100
select = ["E", "F", "B", "I", "N", "UP", "ANN", "RUF"]

[lint.pydocstyle]
convention = "google"

[lint.per-file-ignores]
"__init__.py" = ["F401"]