[project]
name = "mdm-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.20.0.post0",
    "art>=6.5",
    "asyncpg>=0.30.0",
    "logging>=0.4.9.6",
    "psycopg2>=2.9.10",
    "pydantic-settings>=2.9.1",
    "sqlalchemy[asyncio]>=2.0.40",
]

