[project]
name = "mdm-bot"
version = "0.1.0"
description = "MDM Store Telegram bot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiogram>=3.20.0.post0",
    "art>=6.5",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.127.0",
    "jinja2>=3.1.6",
    "meilisearch>=0.31.0",
    "pydantic-settings>=2.9.1",
    "sqlalchemy[asyncio]>=2.0.40",
]
